# mopper

./: Cargo.toml  README.md
src/: basic_functions.rs  error.rs  extension.rs  join.rs  lib.rs  main.rs  mopper_options.rs  plan.rs  plan_rewriter.rs  serializer.rs  tests.rs  util.rs
src/function/: basic_function.rs  blank_node.rs  constant.rs  iri.rs  literal.rs  mod.rs  reference.rs  template_function_value.rs  template_parser.rs  template_string.rs  uri_encode.rs
src/operator/: extension.rs  join.rs  mod.rs  serializer.rs
src/sink/: mod.rs  std_out.rs  writer_sink.rs
src/source/: csv_file.rs  mod.rs
test-resources/: .gitignore
test-resources/rml-testcases/RMLTC0000-CSV/: mapping.dot  mapping.json  mapping_pretty.dot
test-resources/rml-testcases/RMLTC0008b-CSV/: mapping.dot  mapping.json  mapping_pretty.dot  output.nq
test-resources/rml-testcases/RMLTC1036-CSV/: mapping.dot  mapping.json  mapping_pretty.dot  output.nq  sport.csv  student.csv
test-resources/tests/non-existing-file-source/: mapping.json
testcases/RMLTC1036-CSV/: mapping.dot  mapping.json  mapping_pretty.dot
