[package]
name = "mopper"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
crossbeam-channel = "0.5"
serde_json = "1.0"
serde = { version = "1.0.198", features = ["derive"] }
operator = {git = "https://github.com/s-minoo/algemaploom-rs"}
pct-str = "2.0.0"
argh = "0.1.12"
stderrlog = "0.6"
log = "0.4"
