[package]
name = "mopper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
crossbeam-channel = "0.5"
serde_json = "1.0"
serde = { version = "1.0.198", features = ["derive"] }
operator = {git = "https://github.com/RMLio/algemaploom-rs", tag = "v0.4.0"}
pct-str = "2.0.0"
stderrlog = "0.6"
log = "0.4"
clap = { version = "4.5.4", features = ["derive"] }
derive_builder = "0.20.0"
iri-string = "0.7.2"